# portcullis

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Dockerfile  GitVersion.yml  Jenkinsfile  Makefile.am  NEWS  README.md  Singularity  antigen.sh  bam_filter.hpp  build_boost.sh  clean.sh  configure.ac  intron.hpp  junction.hpp  junction_builder.hpp  junction_system.hpp  portculis.cbp  prepare.hpp  update_version.sh
.travis/: before_install.sh  install.sh
data/: default_filter.json  default_model.forest  low_juncs_filter.json  luca_filter.json  selftrain_initial_neg.json  selftrain_initial_neg.json.old  selftrain_initial_neg.layer1.json  selftrain_initial_neg.layer2.json  selftrain_initial_neg.layer3.json  selftrain_initial_neg.layer4.json  selftrain_initial_neg.layer5.json  selftrain_initial_neg.layer6.json  selftrain_initial_neg.layer7.json  selftrain_initial_pos.json  selftrain_initial_pos.json.old  selftrain_initial_pos.layer1.json  selftrain_initial_pos.layer2.json  selftrain_initial_pos.layer3.json
data/balanced/: selftrain_initial_pos.layer3.json
data/precise/: selftrain_initial_neg.layer1.json  selftrain_initial_neg.layer2.json  selftrain_initial_neg.layer4.json  selftrain_initial_pos.layer1.json  selftrain_initial_pos.layer2.json
doc/: Makefile  Makefile.in
doc/source/: .gitignore  conf.py  conf.py.in  faq.rst  index.rst  installation.rst  junctools.rst  metrics.rst  scripts.rst  (+3 more)
etc/: default_filter.json  default_filter_old.json  luca_filter.json
include/: bam_prepare.hpp  bam_utils.hpp  bamtools_pileup.hpp  bamtools_sort.h  chunk_loader.hpp  chunk_processor.hpp  depth_parser.hpp  genome_mapper.hpp  intron.hpp  junction.hpp  junction_builder.hpp  junction_system.hpp  location.hpp  portculis.hpp  prepare.hpp  record_writer.hpp  seed_collector.hpp  seq_utils.hpp  variant_mapper.hpp
lib/: .gitignore  Makefile.am  portcullis-0.11.pc.in  portcullis.pc.in
lib/include/portcullis/: intron.hpp  junction.hpp  junction_system.hpp  k_fold.hpp  kmer.hpp  markov_model.hpp  model_features.hpp  performance.hpp  portcullis_fs.hpp  python_exe.hpp  python_helper.hpp  rule_parser.hpp  seq_utils.hpp
lib/include/portcullis/bam/: bam_alignment.hpp  bam_master.hpp  bam_reader.hpp  bam_writer.hpp  depth_parser.hpp  genome_mapper.hpp
lib/include/portcullis/ml/: balancing.hpp  enn.hpp  icote.hpp  k_fold.hpp  knn.hpp  markov_model.hpp  model_features.hpp  performance.hpp  smote.hpp  ss_forest.hpp
lib/src/: .gitignore  bam_alignment.cc  bam_master.cc  bam_reader.cc  bam_writer.cc  depth_parser.cc  enn.cc  genome_mapper.cc  icote.cc  intron.cc  junction.cc  junction_system.cc  knn.cc  markov_model.cc  model_features.cc  performance.cc  python_exe.cc  rule_parser.cc  smote.cc  ss_forest.cc
m4/: ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_timer.m4  ax_check_zlib.m4  ax_cpp_check_lib.m4  ax_dlib.m4  ax_htslib.m4  ax_lib_bamtools.m4  ax_lib_samtools.m4  ax_python_devel.m4  bamtools.m4  dlib.m4  samtools.m4
scripts/: .gitignore  Makefile  Makefile.am  Makefile.in  Snakefile  analyse_alignments.py  analyse_junctions.py  asa.py  bed12.py  bed12_set.py  bed_classify.py  bed_in_bedref.py  bed_merge.py  bed_v_ref.py  cleanup_spanki.py  create_ref.py  cufflinks2spankicov.py  example_pp_ath.yaml  filter_junctions.py  fs2bed.py  fs2gff.py  gff2bed.py  gtf2bed.py  hpc.json  intersect_bed.py  junctools.py  ml.py  ml2.py  pca.py  performance.py  portcullis_convert.py  portcullis_junction.py  portcullis_merge.py  pp.py  predict.py  predict.snakefile  read_gen.py  read_gen.snakefile  setup.py.in  snakey.py  (+17 more)
scripts/junctools/: .gitignore  __init__.py  __init__.py.in  compare.py  convert.py  gtf.py  install_files.txt  junction.py  markup.py  merge.py  set.py  setup.py.in  split.py
scripts/junctools/junctools/: __init__.py.in  __main__.py  compare.py  convert.py  gtf.py  junction.py  performance.py
scripts/portcullis/: .gitignore  install_files.txt  setup.py.in
scripts/portcullis/portcullis/: __init__.py.in  rule_filter.py
src/: .gitignore  Makefile.am  bam_alignment.hpp  bam_filter.cc  bam_filter.hpp  bam_master.hpp  bam_reader.hpp  bam_utils.hpp  bamtools_sort.cpp  cluster.hpp  depth_parser.hpp  filter.hpp  genome_mapper.hpp  htslib_helper.cc  htslib_helper.hpp  intron.cc  intron.hpp  junction.cc  junction.hpp  junction_builder.cc  junction_builder.hpp  junction_filter.cc  junction_filter.hpp  junction_system.cc  junction_system.hpp  portculis.cc  portculis_args.hpp  portcullis.cc  portcullis_fs.hpp  prepare.cc  prepare.hpp  samtools_helper.cc  samtools_helper.hpp  seq_utils.hpp  smv_test.hpp  test.hpp  train.cc  train.hpp
src/bam/: .gitignore  bam_alignment.cc  bam_alignment.hpp  bam_master.cc  bam_master.hpp  bam_reader.cc  bam_reader.hpp  bam_writer.cc  bam_writer.hpp  depth_parser.cc  depth_parser.hpp  genome_mapper.cc  genome_mapper.hpp
src/bam/.deps/: check_unit_tests-bam_alignment.Po  check_unit_tests-bam_master.Po  check_unit_tests-bam_reader.Po  check_unit_tests-depth_parser.Po  check_unit_tests-genome_mapper.Po  portcullis-bam_alignment.Po  portcullis-bam_master.Po  portcullis-bam_reader.Po  portcullis-bam_writer.Po  portcullis-depth_parser.Po  portcullis-genome_mapper.Po
src/inc/: common_args.hpp  file_utils.hpp  str_utils.hpp
src/ml/: da.cpp  da.hpp  hidden_layer.cpp  hidden_layer.hpp  logistic_regression.cpp  logistic_regression.hpp  math.hpp  sda.cpp  sda.hpp
tests/: .gitignore  Makefile.am  bam_filter_tests.cpp  bam_tests.cpp  bam_utils_tests.cpp  check_portculis.cc  check_portcullis.cc  compat.sh  compat.sh.in  depth_parser_tests.cpp  genome_mapper_tests.cpp  gtest.mk  htslib_helper_tests.cpp  intron_tests.cpp  junction_tests.cpp  kmer_tests.cpp  location_tests.cpp  portculis_tests.cpp  portcullis_tests.cpp  samtools_helper_tests.cpp  seq_utils_tests.cpp  smote_tests.cpp  test_full.sh  test_prepare.sh  test_substeps.sh
tests/gtest/src/: .gitignore
tests/gtest/src/.deps/: .gitignore
tests/resources/: .gitignore  bam1.bam  bam2.bam  clipped3.bam  clipped3.bam.bai  ecoli.bam.depth  ecoli.fa.fai  sorted.bam  sorted.bam.bai  spombe.III.fa  unsorted.bam
(+5 files in other folders)
